--- a/s1-getting-started/book-store-notes-final/app/src/main/res/values/strings.xml
+++ b/s1-getting-started/book-store-notes-final/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Book Store Notes</string>
+    <string name="app_name">book_store_notes</string>
 </resources>
